--- a/MyOwnDomain/index.html
+++ b/MyOwnDomain/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <title>Physiotherapy Jacob Marciniak</title>
+    <meta name="description" content="Fizjoterapia Warszawa, Pruszkow"/>
+    <meta name="keyywords" content="fizjoterapia, lekarz, Warszawa, Pruszkow"/>
+    <meta http-equiv="x-ua-compatible" content="IE=edge,chrome=1"/>
 </head>
 <body>
-<div>
-</div>
+<h3>Fizjoterapia Jakub Marciniak!</h3>
+
+O mnie
+Dla kogo
+Wykonywane zabiegi
+kontakt
 </body>
 </html>
