--- a/Project/index.html
+++ b/Project/index.html
@@ -2,17 +2,18 @@
 <html lang="pl">
 <head>
     <meta charset="utf-8">
-    <title>Physiotherapy Jacob Marciniak</title>
-    <meta name="description" content="Fizjoterapia Warszawa, Pruszkow"/>
-    <meta name="keyywords" content="fizjoterapia, lekarz, Warszawa, Pruszkow"/>
+    <title>Project</title>
     <meta http-equiv="x-ua-compatible" content="IE=edge,chrome=1"/>
+    <link rel="stylesheet" href="style.css" type="text/css"/>
 </head>
+
 <body>
 <h3>Fizjoterapia Jakub Marciniak!</h3>
 
-O mnie
+<a href="index.html">O mnie</a>
 Dla kogo
 Wykonywane zabiegi
 kontakt
+
 </body>
 </html>
