--- a/Project/index.html
+++ b/Project/index.html
@@ -8,5 +8,18 @@
 </head>
 
 <body>
+<div>
+    <div id="header">
+        HEADER
+    </div>
+    <div id="menu">
+        MENU
+    </div>
+    <div id="main_content">
+        MAIN_CONTENT
+    </div>
+    <div id="content">CONTENT</div>
+    <div id="footer">FOOTER</div>
+</div>
 </body>
 </html>
