--- a/Project/index.html
+++ b/Project/index.html
@@ -18,8 +18,12 @@
     <div id="main_content">
         MAIN_CONTENT
     </div>
-    <div id="content">CONTENT</div>
-    <div id="footer">FOOTER</div>
+    <div id="content">
+		CONTENT
+	</div>
+    <div id="footer">
+		FOOTER
+	</div>
 </div>
 </body>
 </html>
