--- a/Project/index.html
+++ b/Project/index.html
@@ -5,24 +5,51 @@
     <title>Project</title>
     <meta http-equiv="x-ua-compatible" content="IE=edge,chrome=1"/>
     <link rel="stylesheet" href="style.css" type="text/css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
 </head>
 
 <body>
 <div id="container">
     <div id="header">
-        HEADER
+        <div id="logo">
+            <h1>Kamil Maleszko</h1>
+        </div>
+
+        <div id="logo_contact">
+            linkedIn<br>
+            @<br>
+            tel.<br>
+        </div>
     </div>
     <div id="menu">
-        MENU
+        MENU<br><br>
+        About Me<br><br>
+        Education<br><br>
+        Experience<br><br>
+        Certification<br><br>
+        Skills<br><br>
+        Iterests<br><br>
+        Download<br><br>
+        Contact<br><br>
     </div>
     <div id="main_content">
-        MAIN_CONTENT
+        MAIN_CONTENT<br><br>
+
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam porttitor ultrices aliquet. Vestibulum ipsum metus, pulvinar at nunc et, hendrerit placerat turpis. Nam vitae suscipit turpis. Mauris elementum laoreet odio ut placerat. Phasellus fringilla vehicula neque, eu rutrum odio. Proin vitae elit efficitur, vulputate justo sollicitudin, efficitur eros. Proin tellus nibh, sagittis sit amet libero a, eleifend cursus diam. Etiam sit amet ante eu sapien mattis tempor. Donec egestas sapien vitae nisl aliquet hendrerit. Maecenas tempus metus erat, quis tristique lacus euismod non. Proin elementum nisl ex, eget luctus ex scelerisque at. Nullam id mi sit amet neque ornare iaculis quis non ex. Cras convallis non nulla eget vehicula. Duis sed sapien vel lorem dignissim vulputate. Aliquam pharetra enim quam, a posuere nulla lobortis ut. Morbi congue rutrum elementum. <br><br>
+
+        Morbi vulputate auctor eleifend. Mauris consectetur, massa nec gravida eleifend, purus turpis feugiat ipsum, sit amet efficitur neque enim ac arcu. Pellentesque id augue dui. Nunc vitae varius ante. Nulla non leo at nibh luctus facilisis. Mauris iaculis mauris sit amet nulla porttitor pulvinar. Maecenas consequat, felis vel malesuada consectetur, metus risus maximus tortor, non iaculis turpis nisi a orci.<br><br>
+
+        Nulla facilisi. Etiam bibendum vulputate nulla, luctus suscipit ligula. Suspendisse lobortis velit risus, quis sollicitudin nulla ornare vitae. Vivamus efficitur erat vitae felis vulputate, id cursus erat commodo. Nam eu vehicula dui. Mauris quis ligula et orci cursus ultrices. Fusce maximus bibendum ante, at ullamcorper sapien varius dapibus.<br><br>
+
+        Vivamus ornare dui at tortor porta, a volutpat diam elementum. Quisque aliquet interdum elementum. Aenean ut metus ut lorem malesuada lacinia quis vel velit. Etiam vitae metus metus. Donec ante dolor, cursus at gravida nec, venenatis imperdiet felis. Donec molestie sollicitudin enim mollis aliquet. Donec mollis molestie ante. Integer quis neque nec urna euismod vulputate. Suspendisse vel lorem laoreet ante feugiat blandit eget non orci. Nulla semper malesuada turpis a blandit.<br><br>
     </div>
     <div id="content">
-		CONTENT
+		AD CONTENT
 	</div>
     <div id="footer">
-		FOOTER
+		Kamil Maleszko &copy; Wszelkie prawa zastrzeżone.
 	</div>
 </div>
 </body>
