Update after validation.

--- a/Project/index.html
+++ b/Project/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="utf-8">
     <title>Project</title>
-    <meta http-equiv="x-ua-compatible" content="IE=edge,chrome=1"/>
     <link rel="stylesheet" href="style.css" type="text/css"/>
 </head>
 
@@ -48,7 +47,7 @@
             Vivamus ornare dui at tortor porta, a volutpat diam elementum. Quisque aliquet interdum elementum. Aenean ut metus ut lorem malesuada lacinia quis vel velit. Etiam vitae metus metus. Donec ante dolor, cursus at gravida nec, venenatis imperdiet felis. Donec molestie sollicitudin enim mollis aliquet. Donec mollis molestie ante. Integer quis neque nec urna euismod vulputate. Suspendisse vel lorem laoreet ante feugiat blandit eget non orci. Nulla semper malesuada turpis a blandit.<br><br>
         </div>
         <div id="ad_content">
-            <img src="Jellyfish" style="width: 170px; height: 690px;"/>
+            <img src="Jellyfish" alt="Ubuntu Jellyfish" style="width: 170px; height: 690px;">
         </div>
     </div>
     <div id="footer">
