--- a/Project/index.html
+++ b/Project/index.html
@@ -30,9 +30,9 @@
         </div>
         <div style="background-color: #4c4c4c; width: 1000px; min-height: 700px;">
             <div id="content_menu">
-                <div class="option">
-                    <a href=homework.html alt="homework">Homework</a>
-                </div>
+                <a href=homework.html alt="homework">
+                    <div class="option">Homework</div>
+                </a>
                 <a href=index.html alt="About me">
                     <div class="option">About me</div>
                 </a>
