Update and clean

--- a/Project/hangman.html
+++ b/Project/hangman.html
@@ -4,16 +4,16 @@
 <head>
   <meta charset="utf-8">
   <title>Hangman</title>
-  <link rel="stylesheet" href="style.css" type="text/css" />
-  <link rel="stylesheet" href="hangman.css" type="text/css" />
-  <script type="text/javascript" src="hangman.js"></script>
-  <script type="text/javascript" src="timer.js"></script>
+  <link rel="stylesheet" href="style/style.css" type="text/css" />
+  <link rel="stylesheet" href="style/hangman.css" type="text/css" />
+  <script type="text/javascript" src="script/hangman.js"></script>
+  <script type="text/javascript" src="script/timer.js"></script>
 </head>
 
 <body onload="time(); showButtons();">
   <div id="container">
     <div id="header">
-      <div id="clock_data_bar"></div>
+      <div id="clock_data_bar">2023 Mar 14 | 12:00:00</div>
       <a href=index.html alt="About me" style="color: #ffffff">
         <div id="logo">
           <div id="name_surname">
@@ -53,7 +53,7 @@
         <div id="gallows"> <img src="img/gallows0.jpg"> </div>
       </div>
       <div id="ad_content">
-        <img src="Jellyfish" alt="Ubuntu Jellyfish" style="width: 170px; height: 690px;">
+        <img src="img/Jellyfish" alt="Ubuntu Jellyfish" style="width: 170px; height: 690px;">
       </div>
     </div>
     <div id="footer">
