--- a/Project/index.html
+++ b/Project/index.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="utf-8">
     <title>Project</title>
-    <link rel="stylesheet" href="style.css" type="text/css" />
-    <script type="text/javascript" src="timer.js"></script>
+    <link rel="stylesheet" href="style/style.css" type="text/css" />
+    <script type="text/javascript" src="script/timer.js"></script>
 </head>
 
 <body onload="time();">
     <div id="container">
         <div id="header">
-            <div id="clock_data_bar"></div>
+            <div id="clock_data_bar">2023 Mar 14 | 12:00:00</div>
             <a href=index.html alt="About me" style="color: #ffffff">
                 <div id="logo">
                     <div id="name_surname">
@@ -75,7 +75,7 @@
                 feugiat blandit eget non orci. Nulla semper malesuada turpis a blandit.<br><br>
             </div>
             <div id="ad_content">
-                <img src="Jellyfish" alt="Ubuntu Jellyfish" style="width: 170px; height: 690px;">
+                <img src="img/Jellyfish" alt="Ubuntu Jellyfish" style="width: 170px; height: 690px;">
             </div>
         </div>
         <div id="footer">
