--- a/Project/index.html
+++ b/Project/index.html
@@ -22,17 +22,14 @@
             </a>
 
             <div id="logo_contact">
-                In<br>
-                @<br>
-                tel.<br>
+                In: <a href="https://www.linkedin.com/in/kamil-maleszko-045ab9205/" alt="Kamil Maleszko - LinkedIn" style="color: #ffffff;">Visit my LinkedIn</a><br>
+                @: kontakt@kmaleszko.pl<br>
+                tel.: +48 503148227<br>
             </div>
             <div style="clear: both"></div>
         </div>
         <div style="background-color: #4c4c4c; width: 1000px; min-height: 700px;">
             <div id="content_menu">
-                <a href=homework.html alt="homework">
-                    <div class="option">Homework</div>
-                </a>
                 <a href=index.html alt="About me">
                     <div class="option">About me</div>
                 </a>
