--- a/Project/index.html
+++ b/Project/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pl">
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
@@ -23,8 +23,12 @@
             <a href="#education">Education</a>
             <a href="#skills">Skills</a>
             <a href="#contact">Contact</a>
+
+            <span class="active-nav"></span>
         </nav>
 
+        <div class="btn" id="language-icon">pl</div>
+        <div class="bx bx-moon" id="darkMode-icon"></div>
     </header>
 
     <!-- home section design -->
@@ -139,8 +143,10 @@
         </div>
     </section>
 
+    <!-- skills section design -->
+
     <section class="skills" id="skills">
-        <h2 href="heading">My<span>Skills</span></h2>
+        <h2 class="heading">My<span>Skills</span></h2>
 
         <div class="skills-row">
             <div class="skills-column">
@@ -192,6 +198,59 @@
             </div>
         </div>
     </section>
+
+    <!-- contact section design -->
+
+    <section class="contact" id="contact">
+        <h2 class="heading">Contact <span>Me!</span></h2>
+
+        <form action="#">
+            <div class="input-box">
+                <div class="input-field">
+                    <input type="text" placeholder="Full Name" required>
+                    <span class="focus"></span>
+                </div>
+
+                <div class="input-field">
+                    <input type="text" placeholder="Email Address" required>
+                    <span class="focus"></span>
+                </div>
+            </div>
+
+            <div class="input-box">
+                <div class="input-field">
+                    <input type="text" placeholder="Mobile Number" required>
+                    <span class="focus"></span>
+                </div>
+
+                <div class="input-field">
+                    <input type="text" placeholder="Email Subject" required>
+                    <span class="focus"></span>
+                </div>
+            </div>
+
+            <div class="textarea-field">
+                <textarea name="" id="" cols="30" rows="10" placeholder="Your Message" required></textarea>
+                <span class="focus"></span>
+            </div>
+
+            <div class="btn-box btns">
+                <button type="submit" class="btn">Submit</button>
+            </div>
+        </form>
+    </section>
+
+    <!-- footer design -->
+
+    <footer class="footer">
+        <div class="footer-text">
+            <p>Copyright &copy; 2023 by QSoftware | All Rights Reserved.</p>
+        </div>
+
+        <div class="footer-iconTop">
+            <a href="#"><i class='bx bxs-download' ></i></a>
+        </div>
+    </footer>
 
     <script src="script/script.js"></script>
 </body>
