--- a/Project/index.html
+++ b/Project/index.html
@@ -63,7 +63,7 @@
         <h2 class="heading">About <span>Me</span></h2>
 
         <div class="about-img">
-            <img src="img/Portret.jpg" alt="">
+            <img src="img/Mountain.jpg" alt="">
             <span class="circle-spin"></span>
         </div>
 
